--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "query-string": "^6.7.0",
     "react": "^16.8.6",
